Integração com o front